# romsearch

./: Cargo.toml  Makefile.toml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
docs/: github.svg.br  index.html
docs/assets/: frontend-c28afbbe525f6d03.js  frontend-c28afbbe525f6d03.js.br  frontend-dxh18e813f85ea17b.js  frontend-dxh26352dae6bef7e1.js  frontend-dxhfd862c4190f36730.js  frontend-e0fd317348d5262d.js  frontend-e0fd317348d5262d.js.br  frontend_bg-2d2ecce626ada995.wasm  frontend_bg-2d2ecce626ada995.wasm.br  frontend_bg-b45dd6c93b06e555.wasm  frontend_bg-b45dd6c93b06e555.wasm.br  frontend_bg-dxh42ce307691c5963d.wasm  frontend_bg-dxh95d7aaca29926f57.wasm  frontend_bg-dxh972e06584f4a4dc.wasm  github.png.br  site-66c79f5ef3324002.css.br  site-dxh7ff1d69fff23f1c9.css  site.css  site.css.br
docs/assets/dioxus/: Myrient search.js  Myrient search.js.br  Myrient search_bg.wasm  Myrient search_bg.wasm.br  Rom search.js  Rom search.js.br  Rom search_bg.wasm  Rom search_bg.wasm.br  name.js  name.js.br  name_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-ec619651cd4d8de4/: inline0.js  inline0.js.br
frontend/: Cargo.toml  Dockerfile  dioxus.toml  index.html  index.old
frontend/assets/: github.png.br  site.css  site.css.br
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
