[workspace]
resolver = "2"
members = [
    "backend",
    "frontend", 
    "shared",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
shared = { path = "shared", version = "0.1.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
