[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.159"
reqwest = { version = "0.12.8" }
tokio = { version = "1.40.0", features = ["full"]}
meilisearch-sdk = { version = "0.27.1" }
anyhow = "1.0.89"
scraper = { version =  "0.20.0"}
futures = "0.3.28"
futures-util = "0.3.31"
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3.3"
urlencoding = "2.1.3"
#strum = "0.26.3"
#strum_macros = "0.26.4"
#logos = "0.14.2"
#shared = {workspace = true}
shared = { path = "../shared" }
