[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0-alpha.2", features = ["web"]}
serde = "1.0.159"
simple_logger = "4.2.0"
tracing-wasm = "0.2.1"
#tracing = "0.6.0-alpha.2"
tracing-subscriber = "0.3.17"
reqwest = "0.12.8"
# tokio = { version = "1.40.0", features = ["full"], optional = true}
meilisearch-sdk = { version = "0.27.1", features = ["futures-unsend"] }
anyhow = "1.0.89"
dioxus-logger = "0.5.1"
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", branch = "feat/dioxus-0.6", features = ["timing"] }
dioxus-lazy = { git = "https://github.com/dioxus-community/dioxus-lazy.git" }

shared = { path = "../shared" }


[features]
default = []
web = ["dioxus/web"]
