[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0-alpha.3", features = ["web"]}
serde = "1.0.159"
reqwest = "0.12.8"
meilisearch-sdk = { version = "0.27.1", features = ["futures-unsend"] }
anyhow = "1.0.89"
dioxus-logger = "0.5.1"
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", branch = "feat/dioxus-0.6", features = ["timing"] }
#dioxus-lazy = { git = "https://github.com/dioxus-community/dioxus-lazy.git" }

shared = { path = "../shared" }
async-std = "1.13.0"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"


[features]
default = []
web = ["dioxus/web"]
